# k8s-az-devops-pipeline-agent-autoscaler

./: Cargo.toml  README.md  dockerfile
k8s-example-config/: CRD.yml  example-deployment.yml  operator-deployment.yml
src/: crd_spec.rs  main.rs  status_enum.rs
src/services/: kubernetes_action_service.rs  kubernetes_status_service.rs  mod.rs
