[package]
name = "devops_replica_controller_operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }

k8s-openapi = { version = "0.18.0", features = ["v1_22"] }
kube = { version = "0.82.2", default-features = false, features = [ "rustls-tls", "client", "runtime", "derive" ] }

serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0.72"
schemars = "0.8.12"

futures-util = "0.3.28"

log = "0.4"
env_logger = "0.10.0"

anyhow = "1.0.40"

rand = "0.8.4"
